Fix alignment.

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -89,10 +89,15 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a 
   -moz-transition: opacity 0.2s ease-in-out 0.1s;
   -ms-transition: opacity 0.2s ease-in-out 0.1s;
 }
+
 h2:hover .header-link,
 h3:hover .header-link,
 h4:hover .header-link,
 h5:hover .header-link,
 h6:hover .header-link {
   opacity: 1;
+}
+
+h2, h3, h4, h5, h6 {
+  left: -1em;
 }
